--- a/Challenges/PHP (Table Tennis)/css/style.css
+++ b/Challenges/PHP (Table Tennis)/css/style.css
@@ -98,7 +98,11 @@ i {
   color: #333;
 }
 #search-box .row input::placeholder {
-  color: #555;
+  color: rgb(190, 190, 190);
+  font-family: "Work Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
 }
 #search-box .row button {
   margin: -10px -30px;
